# mxml

./: .cppcheck  .cvsignore  .gitattributes  .gitignore  CHANGES  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile.in  NOTICE  README  README.md  SECURITY.md  TODO  build.sh  cmakeconfig.h.in  conanfile.py  config.h.cmake.in  config.h.cmake.in.gen  config.h.in  configure  configure.ac  configure.in  documentation.html  dotest.sh  index.html  makesrcdist  mmd.c  mmd.h  mvalidate.c  mxml-attr.c  mxml-config.h  mxml-entity.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-options.c  mxml-private.c  mxml-private.h  (+16 more)
.github/: FUNDING.yml  codeql.yml
.github/workflows/: build.yml  codeql.yml  coverity.yml
branches/mike/: index.html  mxml.h
cmake/: config.h  config.h.in  mxmlConfig.cmake
doc/: .cvsignore  advanced.html  basics.html  body.man  body.md  docset.css  docset.header  docset.intro  footer.man  install.html  intro.html  intro.man  license.html  makedocs.sh  mxml-cover.sla  mxml-pocket.book  mxml.3  mxml.book  mxml.epub  mxml.html  mxml.man  mxml.opacity  mxmldoc.html  mxmldoc.man  mxmldoc.xsd  refapp.html  reference.header  reference.heading  reference.html  relnotes.html  schema.html  title.html
linux/: Makefile  config.h  mxml4.pc
tags/release-0.9/: README  configure  configure.in  mxml-file.c  test.xml  testmxml.c
tags/release-0.91/: Makefile.in  index.html  mxml-attr.c  mxml-node.c  testmxml.c
tags/release-0.92/: CHANGES  Makefile.in  README  index.html  mxml-search.c
tags/release-0.93/: README  configure.in  documentation.html  mxml-file.c  mxml-search.c  mxml.h  mxml.xml  (+2 more)
tags/release-2.1/: ANNOUNCEMENT  TODO  config.h.in  configure.in  mxml-entity.c  mxml-node.c  mxml-string.c  mxml.spec
tags/release-2.1/doc/: index.html  intro.html  reference.html  relnotes.html
tags/release-2.1/test/: class.cxx
tags/release-2.1/www/: links.php  newsgroups.php  software.php  str.php
tags/release-2.1/www/docfiles/: 1BuildingInstallingandPackagingMiniXML.html  AGNULibraryGeneralPublicLicense.html  ChangesinMiniXML093.html  ChangesinMiniXML12.html  ChangesinMiniXML13.html  ChangingNodeValues.html  ClassesStructuresandUnions.html  CodeDocumentationConventions.html  Contents.html  CreatingMiniXMLPackages.html  Enumerations1.html  FindingandIteratingNodes.html  Functions.html  FunctionsandMethods.html  History.html  Indexing.html  InstallingMiniXML.html  LegalStuff.html  LoadCallbacks.html  SavingXML.html  Structures.html  TheBasics.html  TheBasics1.html  Types.html  Types1.html  Unions.html  VariablesandClassStructureUnionMembers.html  XMLSchema.html  index.html  mxmlAdd.html  mxmlDelete.html  mxmlElementGetAttr.html  mxmlElementSetAttr.html  mxmlEntityGetName.html  mxmlEntityGetValue.html  mxmlFindElement.html  mxmlIndexEnum.html  mxmlIndexFind.html  mxmlIndexNew.html  mxmlIndexReset.html  (+24 more)
tags/release-2.1/www/phplib/: db-sqlite.php
tags/release-2.1/www/swfiles/: mxml-1.1.1-1.i386.rpm  mxml-1.3-1.i386.rpm  mxml-2.0-1.i386.rpm  mxml.md5
test/: class.cxx  struct.cxx
trunk/: .cvsignore  ANNOUNCEMENT  CHANGES  COPYING  Makefile.in  README  TODO  config.h.in  configure  configure.in  documentation.html  index.html  makesrcdist  mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c  mxml.h  mxml.list.in  mxml.man  mxml.pc.in  mxml.spec  mxml.xml  mxmldoc.c  mxmldoc.man  test.xml  testfile.cxx  testmxml.c
trunk/doc/: .cvsignore  advanced.html  basics.html  docset.css  install.html  intro.html  intro.man  license.html  logo.opacity  makedocs.sh  mxml-cover.sla  mxml-pocket.book  mxml.book  mxml.html  mxmldoc.html  mxmldoc.man  mxmldoc.xsd  reference.html  relnotes.html  title.html
trunk/test/: class.cxx  dotest.sh  function.cxx
trunk/vcnet/: config.h  mxml.sln  mxml.vcproj  mxml1.def  mxml1.vcproj  testmxml.vcproj
trunk/www/: account.php  articles.php  comment.php  documentation.php  faq.php  index.php  links.php  login.php  mxml.html  org.minixml.atom  poll.php  software.php  str.php  style.css
trunk/www/data/: .cvsignore  make-form.php  makedb  mxml.db  mxml.sql  software.md5
trunk/www/docfiles/: 3MoreMiniXMLProgrammingTechniques.html  4UsingthemxmldocUtility.html  Abbreviations.html  BReleaseNotes.html  ChangesinMiniXML091.html  ChangesinMiniXML092.html  ChangesinMiniXML093.html  ChangesinMiniXML10.html  ChangesinMiniXML112.html  ChangesinMiniXML12.html  ChangesinMiniXML13.html  ChangesinMiniXML20.html  ChangesinMiniXML21.html  ChangesinMiniXML22.html  ChangesinMiniXML221.html  ChangesinMiniXML222.html  CompilingMiniXML.html  CompilingwithCommandLineTools.html  CreatingMiniXMLPackages.html  CustomDataTypes.html  Enumerations.html  FindingandIteratingNodes.html  FormattedText.html  Functions.html  History.html  HowtoApplyTheseTermstoYourNewLibraries.html  Indexing.html  InstallingMiniXML.html  Introduction.html  LegalStuff.html  LoadCallbacks.html  LoadingandSavingXMLFiles.html  MiniXML21mxmlcustoms.html  MiniXML21mxmlcustomt.html  MiniXML23mxmlSAXLoadFd.html  MiniXML23mxmlSetWrapMargin.html  Nodes.html  NotationConventions.html  OrganizationofThisDocument.html  OtherReferences.html  (+51 more)
trunk/www/phplib/: auth.php  common.php  db.php  globals.php  html.php  str.php
trunk/www/swfiles/: mxml-1.0-1.i386.rpm  mxml.md5
vcnet/: config.h  libmxml1_native.nuspec  libmxml1_native.props  libmxml1_native.redist.nuspec  libmxml2_native.nuspec  libmxml2_native.props  libmxml2_native.redist.nuspec  libmxml4_native.nuspec  libmxml4_native.props  libmxml4_native.redist.nuspec  mxml.sln  mxml1.def  mxml1.vcproj  mxml1.vcxproj  mxml1.vcxproj.filters  mxml2.def  mxml2.vcxproj  mxml4.def  mxml4.vcxproj  mxmldoc.vcproj  mxmldoc.vcxproj  mxmldoc.vcxproj.filters  mxmlstat.vcxproj  mxmlstat.vcxproj.filters  packages.config  testmxml.vcproj  testmxml.vcxproj  testmxml.vcxproj.filters
www/: account.php  articles.php  comment.php  documentation.php  forums.php  index.php  links.php  login.php  mxml.html  poll.php  software.php  str.php  style.css
xcode/: config.h
(+672 files in other folders)
