dnl
dnl "$Id: configure.in,v 1.1 2003/06/03 19:46:30 mike Exp $"
dnl
dnl Configuration script for mini-XML, a small XML-like file parsing library.
dnl
dnl Copyright 2003 by Michael Sweet.
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2, or (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl

AC_INIT(mxml.h)
#AC_PREFIX_DEFAULT(/usr)

dnl Checks for programs...
AC_PATH_PROG(AR,ar)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl Flags for "ar" command...
case "`uname`" in
        Darwin* | *BSD*)
                ARFLAGS="-rcv"
                ;;
        *)
                ARFLAGS="crvs"
                ;;
esac

AC_SUBST(ARFLAGS)

dnl Output the makefile...
AC_OUTPUT(Makefile)

dnl
dnl End of "$Id: configure.in,v 1.1 2003/06/03 19:46:30 mike Exp $".
dnl
